[package]
name = "job"
version = "0.1.0"
authors = ["Alexander Seppälä <dev@timot.se>"]
edition = "2018"

[lib]
name = "job"
path = "src/lib.rs"

[dependencies]
pipeline = {path = "../pipeline"}
uuid = {version = "0.7.4", features = ["v4"]}
handlebars = { version = "2.0.1", features = ["no_dir_source"], default-features = false }
serde_json = "1.0.40"
