[package]
name = "job"
version = "0.1.0"
authors = ["Alexander Seppälä <dev@timot.se>"]
edition = "2018"

[lib]
name = "job"
path = "src/lib.rs"

[dependencies]
pipeline = {path = "../pipeline"}
handlebars = { version = "2.0.1", features = ["no_dir_source"], default-features = false }
serde_json = "1.0.40"
serde = {version = "1.0.91", features = ["derive"]}
