[package]
name = "plugin"
version = "0.1.0"
authors = ["Alexander Seppälä <dev@timot.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.0.0"
pipeline = { path = "../pipeline" }
reqwest = "0.9.19"
tar = "0.4.26"
